# Rag_application

./: README.md
Rag_application_git/: README.md  app.py  pyproject.toml  requirements.txt
Rag_application_git/data/vector_store/: chroma.sqlite3
Rag_application_git/faiss_store/: faiss.index  metadata.pkl
Rag_application_git/notebook/: documents.ipynb  pdf_loader.ipynb
Rag_application_git/src/: embedding.py  search.py  vectorstore.py
